--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-admin-template",
   "version": "1.0.0",
-  "description": "轻量级后台管理系统基础模板",
+  "description": "轻量级后台管理系统",
   "author": "woai3c <411020382@qq.com>",
   "private": false,
   "scripts": {
