--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "element-ui": "^2.11.0",
     "iview": "^3.3.3",
     "quill": "^1.3.6",
     "vue": "^2.6.6",
