--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "iview": "^3.3.3",
     "quill": "^1.3.6",
     "vue": "^2.6.6",
+    "vue-clipboard2": "^0.3.0",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
